--- a/android/VirtualTrackpad/app/build.gradle
+++ b/android/VirtualTrackpad/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.1"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.android.virtualtrackpad"
@@ -31,15 +31,32 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+
+    aaptOptions {
+        noCompress "tflite"
+    }
+
+    // TODO workaround for issue https://stackoverflow.com/questions/64372383/ndk-at-library-android-sdk-ndk-bundle-did-not-have-a-source-properties-file
+    // probably should be removed in the futher updates
+    ndkVersion '21.3.6528147'
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    // Android
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.activity:activity-ktx:1.2.0-beta01'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
 
     // Camera
-    implementation "androidx.camera:camera-camera2:1.0.0-beta10"
-    implementation "androidx.camera:camera-lifecycle:1.0.0-beta10"
-    implementation 'androidx.camera:camera-view:1.0.0-alpha17'
+    implementation "androidx.camera:camera-core:1.0.0-beta11"
+    implementation "androidx.camera:camera-camera2:1.0.0-beta11"
+    implementation "androidx.camera:camera-lifecycle:1.0.0-beta11"
+    implementation 'androidx.camera:camera-view:1.0.0-alpha18'
+
+    // TF
+    implementation 'org.tensorflow:tensorflow-lite:2.2.0'
 }
