--- a/android/VirtualTrackpad/app/build.gradle
+++ b/android/VirtualTrackpad/app/build.gradle
@@ -1,19 +1,20 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
+apply from: '../versions.gradle'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion versions.sdk.compile
+    buildToolsVersion versions.build.tools
 
     defaultConfig {
         applicationId "com.example.android.virtualtrackpad"
-        minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdkVersion versions.sdk.min
+        targetSdkVersion versions.sdk.target
+        versionCode versions.code
+        versionName versions.name
     }
 
     buildTypes {
@@ -42,21 +43,27 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_plugin_version"
 
     // Android
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.activity:activity-ktx:1.2.0-beta01'
-    implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
+    implementation "androidx.appcompat:appcompat:$versions.androidx.appcompat"
+    implementation "androidx.constraintlayout:constraintlayout:$versions.androidx.constraintlayout"
+    implementation "com.google.android.material:material:$versions.material"
+    implementation "androidx.activity:activity-ktx:$versions.androidx.activity"
+    implementation "androidx.fragment:fragment-ktx:$versions.androidx.fragment"
 
     // Camera
-    implementation "androidx.camera:camera-core:1.0.0-beta11"
-    implementation "androidx.camera:camera-camera2:1.0.0-beta11"
-    implementation "androidx.camera:camera-lifecycle:1.0.0-beta11"
-    implementation 'androidx.camera:camera-view:1.0.0-alpha18'
+    implementation "androidx.camera:camera-core:$versions.androidx.camera.core"
+    implementation "androidx.camera:camera-camera2:$versions.androidx.camera.camera2"
+    implementation "androidx.camera:camera-lifecycle:$versions.androidx.camera.lifecycle"
+    implementation "androidx.camera:camera-view:$versions.androidx.camera.view"
 
     // TF
-    implementation 'org.tensorflow:tensorflow-lite:2.2.0'
+    implementation "org.tensorflow:tensorflow-lite:$versions.tensorflow.lite"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_plugin_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_plugin_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.androidx.hilt"
+    kapt "androidx.hilt:hilt-compiler:$versions.androidx.hilt"
 }
