--- a/android/VirtualTrackpad/build.gradle
+++ b/android/VirtualTrackpad/build.gradle
@@ -1,16 +1,17 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.10"
+    ext {
+        gradle_version = "4.1.0"
+        kotlin_plugin_version = "1.4.10"
+        hilt_plugin_version = "2.29.1-alpha"
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build:gradle:$gradle_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_plugin_version"
     }
 }
 
