--- a/android/VirtualTrackpad/app/build.gradle
+++ b/android/VirtualTrackpad/app/build.gradle
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_plugin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
     // Android
     implementation "androidx.appcompat:appcompat:$versions.androidx.appcompat"
@@ -62,8 +62,8 @@ dependencies {
     implementation "org.tensorflow:tensorflow-lite:$versions.tensorflow.lite"
 
     // Hilt
-    implementation "com.google.dagger:hilt-android:$hilt_plugin_version"
-    kapt "com.google.dagger:hilt-android-compiler:$hilt_plugin_version"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.androidx.hilt"
-    kapt "androidx.hilt:hilt-compiler:$versions.androidx.hilt"
+    implementation "com.google.dagger:hilt-android:$versions.androidx.hilt.plugin"
+    kapt "com.google.dagger:hilt-android-compiler:$versions.androidx.hilt.plugin"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.androidx.hilt.viewmodel"
+    kapt "androidx.hilt:hilt-compiler:$versions.androidx.hilt.viewmodel"
 }
