--- a/android/VirtualTrackpad/build.gradle
+++ b/android/VirtualTrackpad/build.gradle
@@ -1,17 +1,13 @@
 buildscript {
-    ext {
-        gradle_version = "4.1.0"
-        kotlin_plugin_version = "1.4.10"
-        hilt_plugin_version = "2.29.1-alpha"
-    }
+    apply from: 'versions.gradle'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_plugin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_plugin_version"
+        classpath "com.android.tools.build:gradle:$versions.gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.androidx.hilt.plugin"
     }
 }
 
