--- a/android/VirtualTrackpad/core/build.gradle
+++ b/android/VirtualTrackpad/core/build.gradle
@@ -31,5 +31,5 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_plugin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 }
