--- a/android/VirtualTrackpad/app/build.gradle
+++ b/android/VirtualTrackpad/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$versions.androidx.activity"
     implementation "androidx.fragment:fragment-ktx:$versions.androidx.fragment"
 
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$versions.androidx.navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$versions.androidx.navigation"
+
     // Camera
     implementation "androidx.camera:camera-core:$versions.androidx.camera.core"
     implementation "androidx.camera:camera-camera2:$versions.androidx.camera.camera2"
@@ -63,6 +67,7 @@ dependencies {
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$versions.androidx.hilt.plugin"
+    implementation project(path: ':data_detection_configs')
     kapt "com.google.dagger:hilt-android-compiler:$versions.androidx.hilt.plugin"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.androidx.hilt.viewmodel"
     kapt "androidx.hilt:hilt-compiler:$versions.androidx.hilt.viewmodel"
