--- a/android/VirtualTrackpad/build.gradle
+++ b/android/VirtualTrackpad/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     apply from: 'versions.gradle'
     ext {
         versions.kotlin = '1.4.10'
+        versions.kotlin = '1.4.10'
     }
     repositories {
         google()
