--- a/android/VirtualTrackpad/settings/build.gradle
+++ b/android/VirtualTrackpad/settings/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
     id 'dagger.hilt.android.plugin'
 }
 apply from: '../versions.gradle'
@@ -33,13 +34,25 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':data_detection_configs')
+
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
-    // Datastore
-    implementation "androidx.datastore:datastore-preferences:$versions.androidx.datastore"
+    // Android
+    implementation "androidx.fragment:fragment-ktx:$versions.androidx.fragment"
+    implementation "androidx.recyclerview:recyclerview:$versions.androidx.recycler_view"
+    implementation "androidx.cardview:cardview:$versions.androidx.card_view"
+    implementation "androidx.constraintlayout:constraintlayout:$versions.androidx.constraintlayout"
+    implementation "com.google.android.material:material:$versions.material"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:$versions.androidx.navigation"
+    implementation "androidx.navigation:navigation-ui-ktx:$versions.androidx.navigation"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$versions.androidx.hilt.plugin"
     kapt "com.google.dagger:hilt-android-compiler:$versions.androidx.hilt.plugin"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$versions.androidx.hilt.viewmodel"
+    kapt "androidx.hilt:hilt-compiler:$versions.androidx.hilt.viewmodel"
 }
