--- a/android/VirtualTrackpad/versions.gradle
+++ b/android/VirtualTrackpad/versions.gradle
@@ -17,6 +17,8 @@ ext {
                     constraintlayout: "2.0.4",
                     activity        : "1.2.0-beta01",
                     fragment        : "1.3.0-beta01",
+                    recycler_view   : "1.1.0",
+                    card_view       : "1.0.0",
                     camera          : [
                             core     : "1.0.0-beta11",
                             camera2  : "1.0.0-beta11",
@@ -28,10 +30,12 @@ ext {
                             viewmodel: "1.0.0-alpha02",
                     ],
                     navigation      : "2.3.1",
+                    datastore       : "1.0.0-alpha02",
             ],
             material  : "1.2.1",
             tensorflow: [
-                    lite: "2.2.0"
+                    lite: "2.3.0",
+                    gpu : "2.3.0"
             ]
     ]
 }
