--- a/android/VirtualTrackpad/build.gradle
+++ b/android/VirtualTrackpad/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         versions.kotlin = '1.4.10'
         versions.kotlin = '1.4.10'
         versions.kotlin = '1.4.10'
+        versions.kotlin = '1.4.10'
     }
     repositories {
         google()
