--- a/android/VirtualTrackpad/camera/build.gradle
+++ b/android/VirtualTrackpad/camera/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+    id 'dagger.hilt.android.plugin'
+}
 apply from: '../versions.gradle'
 
 android {
@@ -10,7 +12,6 @@ android {
     buildToolsVersion versions.build.tools
 
     defaultConfig {
-        applicationId "com.example.android.virtualtrackpad"
         minSdkVersion versions.sdk.min
         targetSdkVersion versions.sdk.target
         versionCode versions.code
@@ -23,47 +24,32 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = '1.8'
     }
-
-    aaptOptions {
-        noCompress "tflite"
-    }
-
-    // TODO workaround for issue https://stackoverflow.com/questions/64372383/ndk-at-library-android-sdk-ndk-bundle-did-not-have-a-source-properties-file
-    // probably should be removed in the further updates
-    ndkVersion '21.3.6528147'
 }
 
 dependencies {
     implementation project(path: ':data_detection_configs')
-    implementation project(path: ':settings')
     implementation project(path: ':detection')
-    implementation project(path: ':device_connection')
-    implementation project(path: ':camera')
 
+    // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
 
     // Android
-    implementation "androidx.appcompat:appcompat:$versions.androidx.appcompat"
+    implementation "androidx.fragment:fragment-ktx:$versions.androidx.fragment"
     implementation "androidx.constraintlayout:constraintlayout:$versions.androidx.constraintlayout"
     implementation "com.google.android.material:material:$versions.material"
-    implementation "androidx.activity:activity-ktx:$versions.androidx.activity"
-    implementation "androidx.fragment:fragment-ktx:$versions.androidx.fragment"
-
-    // Navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:$versions.androidx.navigation"
-    implementation "androidx.navigation:navigation-ui-ktx:$versions.androidx.navigation"
 
     // Camera
+    implementation "androidx.camera:camera-core:$versions.androidx.camera.core"
+    implementation "androidx.camera:camera-camera2:$versions.androidx.camera.camera2"
     implementation "androidx.camera:camera-lifecycle:$versions.androidx.camera.lifecycle"
+    implementation "androidx.camera:camera-view:$versions.androidx.camera.view"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$versions.androidx.hilt.plugin"
