--- a/desktop/VirtualTrackpad/build.gradle
+++ b/desktop/VirtualTrackpad/build.gradle
@@ -7,6 +7,7 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 application {
@@ -21,6 +22,9 @@ dependencies {
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.4.1"
+
+    // Koin DI
+    implementation "org.koin:koin-core:2.2.0"
 
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit"
 }
