--- a/android/VirtualTrackpad/build.gradle
+++ b/android/VirtualTrackpad/build.gradle
@@ -1,5 +1,8 @@
 buildscript {
     apply from: 'versions.gradle'
+    ext {
+        versions.kotlin = '1.4.20'
+    }
     repositories {
         google()
         jcenter()
@@ -8,6 +11,7 @@ buildscript {
         classpath "com.android.tools.build:gradle:${versions.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.androidx.hilt.plugin"
+        classpath 'androidx.benchmark:benchmark-gradle-plugin:1.0.0'
     }
 }
 
